--- a/css/custom.css
+++ b/css/custom.css
@@ -28,9 +28,16 @@ FONTS
     font-size: medium;
 }
 
+.font-smal{
+    font-size: small;
+}
+
 .text-center{
     text-align: center;
 }
+
+
+
 
 
 
@@ -58,6 +65,9 @@ MARGINS
     margin-bottom: 10% !important;
 }
 
+.margin-right-10-px{
+    margin-right: 10px;
+}
 
 
 
@@ -104,6 +114,10 @@ BORDER
     border-radius: 50%;
 }
 
+.border-2-lightbalck{
+    border: 2px solid #263238;
+}
+
 
 
 
@@ -130,7 +144,13 @@ COLOR
 /******************************************************************
 OTHER
  */
+.cursor-pointer{
+    cursor: pointer;
+}
 
+.outline-none{
+    outline: none;
+}
 
 
 
@@ -173,6 +193,10 @@ BACKGROUND
 
 .background-lightottanio{
     background-color:rgba(120,144,156,0.2);
+}
+
+.background-ottanio{
+    background-color: #29353A!important;
 }
 
 .background-lightblue{
