--- a/components/home.html
+++ b/components/home.html
@@ -1,17 +1,17 @@
     <div ng-controller="homeController">
-        <div id="map-div"></div>
+        <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
+            <div id="map-div"></div>
 
-        <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-100-vh">
             <div id="login-container" flex="100">
                 <div id="open-menu-button" ng-click="toggleLeft()" class="border-2-lightbalck cursor-pointer outline-none">
-                    <img id="open-menu-icon" src="../smartStudio/img/open-menu.png">
+                    <img id="open-menu-icon" src="../smartStudio/img/open-menu.png" alt="">
                 </div>
                 <section layout="row" flex>
-                    <md-sidenav id="menu-panel" class="md-sidenav-left" mode="push" md-component-id="left" md-disable-backdrop md-whiteframe="4">
+                    <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4">
                         <md-toolbar class="background-ottanio" layout="row" layout-align="center center">
                             <h1 class="md-toolbar-tools">Menu</h1>
                             <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                                <img src="../smartStudio/img/close-menu.gif">
+                                <img src="../smartStudio/img/close-menu.gif" alt="">
                             </div>
                         </md-toolbar>
                         <md-content layout-margin>
