--- a/components/home.html
+++ b/components/home.html
@@ -3,7 +3,7 @@
             <div id="map-div"></div>
 
             <div id="login-container" flex="100">
-                <div id="open-menu-button" ng-click="toggleLeft()" class="border-2-lightbalck cursor-pointer outline-none">
+                <div id="open-menu-button" ng-click="toggleLeft()" class="border-2-lightbalck margin-left--10px cursor-pointer outline-none">
                     <img id="open-menu-icon" src="../smartStudio/img/open-menu.png" alt="">
                 </div>
                 <section layout="row" flex>
@@ -14,11 +14,22 @@
                                 <img src="../smartStudio/img/close-menu.gif" alt="">
                             </div>
                         </md-toolbar>
-                        <md-content layout-margin>
-                            <p>This sidenav is not showing any backdrop, where users can click on it, to close the sidenav.</p>
-                            <md-button ng-click="toggleLeft()" class="md-accent">
-                                Close this Sidenav
-                            </md-button>
+                        <md-content layout-margin class="margin-top-10">
+                            <div layout="column" layout-align="center center">
+                                <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
+                            </div>
+                            <div layout="column">
+                                <md-list>
+                                    <md-list-item ng-click=""><p>Anagrafica</p><img src="../smartStudio/img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Ancore</p><img src="../smartStudio/img/ancora-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Seleziona piano</p><img src="../smartStudio/img/floor.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../smartStudio/img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Storico</p><img src="../smartStudio/img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../smartStudio/img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Cambia password</p><img src="../smartStudio/img/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click="logout()"><p>Logout</p><img src="../smartStudio/img/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                </md-list>
+                            </div>
                         </md-content>
                     </md-sidenav>
                 </section>
