--- a/components/login.html
+++ b/components/login.html
@@ -1,37 +1,39 @@
 <div ng-controller="loginController">
     <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-100-vh">
-        <div id="login-container" flex="40" flex-lg="40" flex-xl="20" flex-sm="100" flex-xs="100" class="border-radius-20-px
-            padding-40-px background-lightottanio box-shadow-40-4-white">
+        <div id="login-container" flex="20" flex-lg="20" flex-xl="20" flex-sm="40" flex-xs="100" class="">
             <form id="loginForm" name="loginForm">
                 <div layout="row" layout-align="center center">
                     <img src="../smartStudio/img/avatar.png" class="avatar-image border-radius-50" alt="Smart Studio">
                 </div>
                 <div layout="column">
                     <div layout="row" layout-align="center center" class="padding-bottom-1o">
-                        <h1 class="color-white font-iceberg font-x-large">LOGIN</h1>
+                        <h1 class="color-white font-iceberg font-x-large">SMART STUDIO</h1>
                     </div>
-                    <md-input-container>
-                        <label for="usernameInput">Username</label>
+                    <md-input-container class="margin-bottom-0">
+                        <label for="usernameInput" class="font-smal">Username</label>
                         <input required type="text" id="usernameInput" name="usernameInput" ng-model="user.username" title="">
                         <div ng-messages="loginForm.usernameInput.$error || loginForm.$submitted" role="alert">
                             <div ng-message=" required">Inserire un username</div>
                         </div>
                     </md-input-container>
                     <br>
-                    <md-input-container>
-                        <label for="passwordInput">Password</label>
+                    <md-input-container class="margin-top-0 margin-bottom-0">
+                        <label for="passwordInput" class="font-smal">Password</label>
                         <input required type="password" id="passwordInput" name="passwordInput" ng-model="user.password" title="">
                         <div ng-messages="loginForm.passwordInput.$error || loginForm.$submitted">
                             <div ng-message="required">Inserire una password</div>
                         </div>
                     </md-input-container>
-                    <md-subheader class="background-transparent-white text-center color-white font-medium border-1-red
-                        border-radius-20-px" ng-show="errorHandeling.wrongData">Utente non registrato o password errata</md-subheader>
+                    <md-subheader class="background-transparent-white text-center color-white font-x-smal border-1-red
+                        border-radius-20-px margint-top-5-px margin-bottom-10-px" ng-show="errorHandeling.wrongData">Utente non registrato o password errata</md-subheader>
                     <md-subheader class="background-transparent-white color-white font-medium border-radius-20-px"
                         ng-show="errorHandeling.noConnection">Impossibile communicare con il server</md-subheader>
-                    <md-button id="loginButton" ng-click="login(loginForm)" class="md-raised">Login</md-button>
+                    <md-button id="loginButton" ng-click="login(loginForm)" class="md-raised margin-top-0">Login</md-button>
                 </div>
             </form>
+            <div class="float-right color-white font-smal cursor-pointer">
+                <p class="text-underlined">Recupera password</p>
+            </div>
         </div>
     </div>
 </div>
