REFACTORING: login, changePassword, homeMenu
Cambiata la grafica della pagina di login e cambio password dopo aver parlato con Saverio, Cambiato anche il colore del menu applicando la palette scelta da Saverio (cyan)

--- a/components/home.html
+++ b/components/home.html
@@ -3,15 +3,15 @@
             <div id="map-div"></div>
 
             <div id="login-container" flex="100">
-                <div id="open-menu-button" ng-click="toggleLeft()" class="border-2-lightbalck margin-left--10px cursor-pointer outline-none">
+                <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--25-px cursor-pointer outline-none">
                     <img id="open-menu-icon" src="../smartStudio/img/open-menu.png" alt="">
                 </div>
                 <section layout="row" flex>
                     <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4">
-                        <md-toolbar class="background-ottanio" layout="row" layout-align="center center">
-                            <h1 class="md-toolbar-tools">Menu</h1>
+                        <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
+                            <h1 class="md-toolbar-tools color-black">Menu</h1>
                             <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
-                                <img src="../smartStudio/img/close-menu.gif" alt="">
+                                <img src="../smartStudio/img/close-menu.png" alt="">
                             </div>
                         </md-toolbar>
                         <md-content layout-margin class="margin-top-10">
@@ -22,7 +22,7 @@
                                 <md-list>
                                     <md-list-item ng-click=""><p>Anagrafica</p><img src="../smartStudio/img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                     <md-list-item ng-click=""><p>Ancore</p><img src="../smartStudio/img/ancora-icon.png" class="menu-list-icon" alt=""></md-list-item>
-                                    <md-list-item ng-click=""><p>Seleziona piano</p><img src="../smartStudio/img/floor.png" class="menu-list-icon" alt=""></md-list-item>
+                                    <md-list-item ng-click=""><p>Seleziona piano</p><img src="../smartStudio/img/floor-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                     <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../smartStudio/img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                     <md-list-item ng-click=""><p>Storico</p><img src="../smartStudio/img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
                                     <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../smartStudio/img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
