--- a/components/recover-password-code.html
+++ b/components/recover-password-code.html
@@ -1,14 +1,14 @@
 <div ng-controller="recoverPassController">
     <div layout="column"  class="height-100-vh">
         <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
-            <div id="recover-pass-code-container" flex="20" flex-lg="20" flex-xl="20" flex-sm="40" flex-xs="100" class="">
+            <div id="recover-pass-code-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
                 <form id="recoverPassCodeForm" name="recoverPassCodeForm">
                     <div layout="row" layout-align="center center">
-                        <img src="../smartStudio/img/avatar.png" class="avatar-image border-radius-50" alt="Smart Studio">
+                        <img src="../smartStudio/img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Studio">
                     </div>
                     <div layout="column">
-                        <div layout="row" layout-align="center center" class="padding-bottom-1o">
-                            <h1 class="color-white font-iceberg font-x-large">SMART STUDIO</h1>
+                        <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
+                            <h1 class="font-iceberg font-x-large">SAFETY IoT PLATFORM</h1>
                         </div>
                         <md-input-container class="margin-top-0 margin-bottom-0">
                             <label for="codeInput" class="font-smal">Codice</label>
@@ -38,14 +38,14 @@
                                 <div ng-message="required">Reinserire la password</div>
                             </div>
                         </md-input-container>
-                        <div class="background-transparent-white text-center color-white font-x-smal border-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.passwordNotMatch">Le password non coincidono</div>
-                        <div class="background-transparent-white text-center color-white font-x-smal border-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">{{error}}</div>
-                        <div class="background-transparent-white text-center color-white font-x-smal barder-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px"
+                        <div class="background-transparent-white text-center color-red font-smal
+                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.passwordNotMatch">Le password non coincidono</div>
+                        <div class="background-transparent-white text-center color-red font-smal
+                                    margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">{{error}}</div>
+                        <div class="background-transparent-white text-center color-red font-smal
+                                margint-top-5-px margin-bottom-10-px padding-10-px"
                              ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
-                        <md-button id="recoverPassCodeButton" ng-click="resetPassword(recoverPassCodeForm)" class="md-raised">Reimposta password</md-button>
+                        <md-button id="recoverPassCodeButton" ng-click="resetPassword(recoverPassCodeForm)" class="md-raised margin-bottom-10">Reimposta password</md-button>
                     </div>
                 </form>
             </div>
