--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@
 }
 
 #open-menu-button{
-    background-color: #263238;
+    background-color: #0093c4;
     position: absolute;
     left: 0;
     top: 15px;
