--- a/css/recover-password.css
+++ b/css/recover-password.css
@@ -2,21 +2,21 @@
 FRAMEWORK
  */
 #recoverPassForm md-input-container label{
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 #recoverPassForm .md-input{
-    color: #FFFFFF;
-    border-color: #FFFFFF!important;
+    color: #000000;
+    border-color: #000000!important;
 }
 
 #recoverPassCodeForm md-input-container label{
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 #recoverPassCodeForm .md-input{
-    color: #FFFFFF;
-    border-color: #FFFFFF!important;
+    color: #000000;
+    border-color: #000000!important;
 }
 
 /**
@@ -28,4 +28,17 @@ CUSTOM CSS
 
 #recoverPassCodeButton{
     margin: 10% 0 0 0;
+}
+
+#recover-pass-container {
+    background: #00000014;
+    padding: 40px;
+    box-shadow: 0 0 110px 30px #00000026;
+    border-radius: 20px;
+}
+#recover-pass-code-container {
+    background: #00000014;
+    padding: 40px;
+    box-shadow: 0 0 110px 30px #00000026;
+    border-radius: 20px;
 }
