--- a/components/recover-password.html
+++ b/components/recover-password.html
@@ -1,14 +1,14 @@
 <div ng-controller="recoverPassController">
     <div layout="column"  class="height-100-vh">
     <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
-        <div id="recover-pass-container" flex="20" flex-lg="20" flex-xl="20" flex-sm="40" flex-xs="100" class="">
+        <div id="recover-pass-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
             <form id="recoverPassForm" name="recoverPassForm">
                 <div layout="row" layout-align="center center">
-                    <img src="../smartStudio/img/avatar.png" class="avatar-image border-radius-50" alt="Smart Studio">
+                    <img src="../smartStudio/img/login-icon.png" class="avatar-image border-radius-50" alt="Smart Studio">
                 </div>
                 <div layout="column">
-                    <div layout="row" layout-align="center center" class="padding-bottom-1o">
-                        <h1 class="color-white font-iceberg font-x-large">SMART STUDIO</h1>
+                    <div layout="row" layout-align="center center" class="padding-bottom-10 padding-top-5">
+                        <h1 class="font-iceberg font-x-large">SAFETY IoT PLATFORM</h1>
                     </div>
                     <md-input-container class="margin-top-0 margin-bottom-0">
                         <label for="emailInput" class="font-smal">Email</label>
@@ -18,18 +18,18 @@
                             <div ng-message="pattern">Inserire una email valida</div>
                         </div>
                     </md-input-container>
-                    <div class="background-transparent-white text-center color-white font-x-smal border-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Email non registrata</div>
-                    <div class="background-transparent-white text-center color-white font-x-smal barder-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px"
+                    <div class="background-transparent-white text-center font-smal color-red
+                                margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Email non registrata</div>
+                    <div class="background-transparent-white text-center color-red font-smal
+                                margint-top-5-px margin-bottom-10-px padding-10-px"
                                   ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
-                    <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)" class="md-raised">Recupera password</md-button>
+                    <md-button id="recoverPassButton" ng-click="sendRecoverPassword(recoverPassForm)" class="md-raised margin-bottom-10">Recupera password</md-button>
                 </div>
             </form>
         </div>
     </div>
     <div layout="row" layout-align="center">
-        <p class="font-smal color-white">Ti verrà inviato un codice di verifica all'inidrizzo email inserito. L'indirizzo email deve essere
+        <p class="font-smal padding-10-px background-transparent-white">Ti verrà inviato un codice di verifica all'inidrizzo email inserito. L'indirizzo email deve essere
             associato ad un account Smart Studio!
         </p>
     </div>
