HOME MAP, SOCKET, CANVAS
Implementato il click sul marker che apre il canvas con il relativo piano della location
Implementata la visualizzazione del canvas con la mappa del piano recuperata dal database
Implementata la communicazione via socket tra client e server

--- a/components/recover-password.html
+++ b/components/recover-password.html
@@ -1,4 +1,4 @@
-<div ng-controller="recoverPassController">
+<div>
     <div layout="column"  class="height-100-vh">
     <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
         <div id="recover-pass-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
