--- a/components/canvas.html
+++ b/components/canvas.html
@@ -1,7 +1,39 @@
-<div ng-controller="">
-    <div layout="column"  class="height-100-vh">
-        <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-90">
-            <canvas></canvas>
+<div>
+    <div layout="row"  class="height-100-vh">
+        <div layout="column"  layout-align="center center" class="parent-size">
+            <canvas id="canvas-id" class="parent-size"></canvas>
+        </div>
+        <div>
+            <div id="open-menu-button" ng-click="toggleLeft()" class="margin-left--25-px cursor-pointer outline-none">
+                <img id="open-menu-icon" src="../smartStudio/img/open-menu.png" alt="">
+            </div>
+            <section layout="row" flex>
+                <md-sidenav id="menu-panel" class="md-sidenav-left" md-component-id="left" md-disable-backdrop md-whiteframe="4">
+                    <md-toolbar class="background-darkcyan" layout="row" layout-align="center center">
+                        <h1 class="md-toolbar-tools color-black">Menu</h1>
+                        <div ng-click="toggleLeft()" class="margin-right-10-px cursor-pointer outline-none">
+                            <img src="../smartStudio/img/close-menu.png" alt="">
+                        </div>
+                    </md-toolbar>
+                    <md-content layout-margin class="margin-top-10">
+                        <div layout="column" layout-align="center center">
+                            <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
+                        </div>
+                        <div layout="column">
+                            <md-list>
+                                <md-list-item ng-click=""><p>Anagrafica</p><img src="../smartStudio/img/anagrafica-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Ancore</p><img src="../smartStudio/img/ancora-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Seleziona piano</p><img src="../smartStudio/img/floor-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Cerca WeTAG</p><img src="../smartStudio/img/tag-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Storico</p><img src="../smartStudio/img/history-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Allarmi attivi</p><img src="../smartStudio/img/alarm-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click=""><p>Cambia password</p><img src="../smartStudio/img/password-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-click="logout()"><p>Logout</p><img src="../smartStudio/img/logout-icon.png" class="menu-list-icon" alt=""></md-list-item>
+                            </md-list>
+                        </div>
+                    </md-content>
+                </md-sidenav>
+            </section>
         </div>
     </div>
 </div>
