--- a/components/home.html
+++ b/components/home.html
@@ -1,18 +1,16 @@
-    <div ng-controller="homeController">
+    <div>
         <div layout="column" layout-align="center center" layout-wrap class="height-100-vh">
             <div ng-controller="mapController" id="map-div">
                 <ng-map center="[41.87194, 12.56738]" zoom="7" mape-type-id="TERRAIN" class="height-100-vh">
                     <custom-marker ng-repeat="marker in markers track by $index"
-                        id="custom-marker-{{$index}}"
-                        position="{{marker.position}}">
+                                   id="custom-marker-{{$index}}"
+                                   on-click="clickLocation($index)"
+                                   position="{{marker.position}}">
                         <div>
                             <img ng-src="../smartStudio/img/{{marker.icon}}" alt="">
                         </div>
                     </custom-marker>
                 </ng-map>
-                    <!--<md-list ng-repeat="marker in markers">-->
-                        <!--<md-list-item>{{marker}}</md-list-item>-->
-                    <!--</md-list>-->
             </div>
 
             <div flex="100">
