--- a/components/login.html
+++ b/components/login.html
@@ -1,4 +1,4 @@
-<div ng-controller="loginController">
+<div>
     <div layout="row" layout-sm="row" layout-xs="row" layout-align="center center" layout-wrap class="height-100-vh" style="z-index: 100">
         <div id="login-container" flex="25" flex-lg="25" flex-xl="20" flex-sm="40" flex-xs="100" class="">
             <form id="loginForm" name="loginForm">
