--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,10 @@ DIMENSIONS
     height: 90%;
 }
 
+.parent-size{
+    width: 100%;
+    height: 100%;
+}
 
 
 /******************************************************************
