--- a/components/login.html
+++ b/components/login.html
@@ -26,8 +26,8 @@
                     </md-input-container>
                     <div class="background-transparent-white text-center color-red font-smal
                         margint-top-5-px margin-bottom-10-px padding-10-px" ng-show="errorHandeling.wrongData">Utente non registrato o password errata</div>
-                    <div class="background-transparent-white text-center color-white font-x-smal border-1-red
-                        border-radius-20-px margint-top-5-px margin-bottom-10-px padding-10-px"
+                    <div class="background-transparent-white text-center color-red font-smal
+                        margint-top-5-px margin-bottom-10-px padding-10-px"
                         ng-show="errorHandeling.noConnection">Impossibile communicare con il server</div>
                     <md-button id="loginButton" ng-click="login(loginForm)" class="md-raised">Login</md-button>
                 </div>
