--- a/css/home.css
+++ b/css/home.css
@@ -19,7 +19,6 @@
 }
 
 #open-menu-icon{
-    width: 42px;
-    padding-top: 5px;
-    padding-right: 5px;
+    width: 20px;
+    padding: 20px 5px 19px 10px;
 }
